manifest/ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: pythonapp
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*.abc.com'
      port:
        name: http
        number: 8080
        protocol: HTTP
